# lfpch

./: Makefile  meson.build
.github/workflows/: c-cpp.yml  codeql.yml
docs/: CHANGELOG.md  README.md
docs/debian/: README.Debian  copyright
include/: auxfunc.h  backend.h  callback.h  checker.h  generator.h  gui.h  gui_cb.h  hashing.h  macros.h  request.h  requests.h  security.h  strop.h  types.h
resources/: create_shortcut.ps1  lfpch.desktop  lfpch.rc  meson.build
resources/pkg_creation/deb/DEBIAN/: control  md5sums  postinst
resources/pkg_creation/deb/usr/share/doc/lfpch/: README.Debian  copyright
resources/pkg_creation/zst/: PKGBUILD  lfpch.install
resources/pkg_creation/zst/tmp/: create_shortcut.ps1
resources/pkg_creation/zst/ucrt64/share/licenses/lfpch/: COPYING_ICONS
src/: auxfunc.c  backend.c  callback.c  checker.c  generator.c  gui.c  gui_cb.c  hashing.c  main.c  meson.build  random_test.c  request.c  requests.c  security.c  strop.c
styles/: styles.css
subprojects/: gtk.wrap
tests/: conn_test.c  drng_test.c  gen_test.c
